# datashear

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.github/workflows/misc/: benchmark_size_calculation.py  example_by_size.py
datashear/: __init__.py  cli.py  splitter.py
examples/: README.md  example_usage.py
src/datashear/: __init__.py  core.py  util.py
tests/: __init__.py  manual_test.py  test_basic.py  test_by_rows.py  test_by_size.py  test_by_size_manual.py  test_complex_csv.py  test_splitter.py
tests/input/: MOCK_DATA_M.csv  MOCK_DATA_SM.csv
