[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashear"
version = "0.1.0"
description = "A Python package that allows you to split CSV files"
readme = "README.md"
authors = [
    {name = "HakumenNC"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["csv", "split", "data", "processing"]

[project.urls]
Homepage = "https://github.com/HakumenNC/datashear"
Repository = "https://github.com/HakumenNC/datashear"

[project.scripts]
datashear = "datashear.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datashear*"]
