[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datashear"
dynamic = ["version"]
description = "A Python package for data manipulation and transformation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "HakumenNC", email = "your.email@example.com"},
]
keywords = ["data", "manipulation", "transformation", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/HakumenNC/datashear"
Repository = "https://github.com/HakumenNC/datashear.git"
"Bug Tracker" = "https://github.com/HakumenNC/datashear/issues"

[tool.hatch.version]
path = "src/datashear/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/datashear"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["datashear"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true